--- a/src/popup.html
+++ b/src/popup.html
@@ -79,7 +79,7 @@
 
       <div class="css-preview">
         <p data-i18n="cssPreviewLabel">プレビュー:</p>
-        <a href="#" class="preview-link extension-recalled" id="previewLink" data-i18n="cssPreviewLink">訪問済みリンクの例</a>
+        <a href="#" class="preview-link extension-perma-recalled" id="previewLink" data-i18n="cssPreviewLink">訪問済みリンクの例</a>
       </div>
 
       <div class="css-input-group">
